2002-01-18  Michael Yount <csf@moscow.com>

	* bin/mj_wwwusr:  Add support for the archive command.

	* lib/Majordomo.pm:  (_lists)  Determine if access to the
	archive command is allowed, and store the result in the
	can_read variable.

	* lib/mj_cf_defs.pl:  Add "signoff" to the default administrivia
	patterns.

	* lib/Mj/CommandProps.pm:  Allow the summary and reverse
	modes of the archive command to work together.

	* lib/Mj/Format.pm:  (archive)  Add format file support
	for the archive-summary command.
	(lists)  Add support for the CAN_READ substitution, a boolean
	variable that indicates if the archive command is accessible.

	* lib/Mj/Inform.pm:  (_inform_owner)  Use the whoami_owner
	setting for the owner's address, not the sender setting.
	Thanks to Duncan Hill.

	* lib/Mj/MailOut.pm:  (mail_message)  Skip empty or undefined
	addresses.  Thanks to Stephen Frost.

	* setup/ask_domain.pl:  Fix warning.  Thanks to Brock Rozen.
 
2002-01-15  Michael Yount <csf@moscow.com>

	* lib/Mj/List.pm:  (digest_sync)  Bugfix:  supply the
	correct arguments to digest_examine.  Thanks to Roger Klorese.

2002-01-13  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (dispatch): Initialize $request->{modes} to an
	empty hashref.

	* lib/Mj/MailOut.pm (owner_done): Don't call bounce parser of
	'nobounce' mode is present.
	* lib/Mj/CommandProps.pm: Add nobounce mode to owner functions.

2002-01-13  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (dispatch): Add 'modes' member of the request
        structure.  This is a hash containing one key per mode present.
        Now you can check for a mode with if ($request->{modes}{whatever})
        instead of using a regexp.  You can still use the old method, of
        course.

2002-01-13  Todd Miller  <Todd.Miller@courtesan.com>

	* bin/mj_queueserv: Fix warning on exec if SIG_CHLD_IGNORE == 1.

2002-01-12  Todd Miller  <Todd.Miller@courtesan.com>

	* lib/Mj/Resend.pm (_describe_taboo): Fix warning on undef $match.